--- a/Store Owner/src/main/resources/templates/updateBook.html
+++ b/Store Owner/src/main/resources/templates/updateBook.html
@@ -86,21 +86,20 @@
                             <option value="" selected="selected" disabled="disabled">Please
                                 select an option...
                             </option>
-                            <option value="Management"
-                                    th:selected="(${book.category}=='Management')">Management
+                            <option value="Library"
+                                    th:selected="(${book.category}=='Library')">Library
                             </option>
-                            <option value="Fiction"
-                                    th:selected="(${book.category}=='Fiction')">Fiction
+                            <option value="Language"
+                                    th:selected="(${book.category}=='Language')">Language
                             </option>
-                            <option value="Engineering"
-                                    th:selected="(${book.category}=='Engineering')">Engineering
+                            <option value="Comic"
+                                    th:selected="(${book.category}=='Comic')">Comic
                             </option>
-                            <option value="Programming"
-                                    th:selected="(${book.category}=='Programming')">Programming
+                            <option value="Life"
+                                    th:selected="(${book.category}=='Life')">Life
                             </option>
-                            <option value="Arts &amp; Literature"
-                                    th:selected="(${book.category}=='Arts &amp; Literature')">Arts
-                                &amp; Literature
+                            <option value="Science"
+                                    th:selected="(${book.category}=='Science')">Science
                             </option>
                         </select>
                     </div>
