--- a/AdminPage/src/main/resources/templates/common/header.html
+++ b/AdminPage/src/main/resources/templates/common/header.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
-    <title>Store Owner</title>
+    <title>Admin Of Book Store</title>
 
     <!-- Bootstrap core CSS -->
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
@@ -20,7 +20,8 @@
     <link th:href="@{/css/font-awesome.min.css}" rel="stylesheet"/>
 
     <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
-    <script>tinymce.init({selector: 'textarea'});</script>
+    <script>let tinymce;
+    tinymce.init({selector: 'textarea'});</script>
 
     <link rel="icon" href="/image/applie-touch-icon.png"/>
 </head>
@@ -120,7 +121,7 @@
                         class="icon-bar"></span> <span class="icon-bar"></span> <span
                         class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" th:href="@{/}">Store Owner</a>
+                <a class="navbar-brand" th:href="@{/}">Admin</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -130,8 +131,8 @@
                                             data-toggle="dropdown" role="button" aria-haspopup="true"
                                             aria-expanded="false">Book <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a th:href="@{/book/add}">Add a new book</a></li>
-                            <li><a th:href="@{/book/bookList}">View book list</a></li>
+                            <li><a th:href="@{/book/add}">View User</a></li>
+                            <li><a th:href="@{/book/bookList}">Request Add Book</a></li>
                         </ul>
                     </li>
                 </ul>
