--- a/AdminPage/src/main/resources/templates/login.html
+++ b/AdminPage/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 
 <body>
 <div class="container">
-    <h2 style="text-align:center; margin-top  : 30px;"><strong>Wellcome To Store Owner Pages</strong></h2>
+    <h2 style="text-align:center; margin-top  : 30px;"><strong>ADMIN PAGE OF BOOK STORE</strong></h2>
     <hr/>
 
     <div class="row">
