--- a/AdminPage/src/main/resources/templates/login.html
+++ b/AdminPage/src/main/resources/templates/login.html
@@ -9,12 +9,8 @@
 
     <div class="row">
         <div class="col-xs-4 col-md-offset-4">
-            <div class="bg-danger" th:if="${param.error}">Invalid username and password.
-            </div>
-
-            <div class="bg-danger" th:if="${param.logout}">You have been logged out.
-            </div>
-
+            <div class="bg-danger" th:if="${param.error}">Invalid username and password.</div>
+            <div class="bg-danger" th:if="${param.logout}">You have been logged out.</div>
             <form class="form-signin" th:action="@{/login}" method="post">
                 <h2 class="form-signin-heading">Sign in</h2>
                 <div class="form-group">
@@ -31,8 +27,7 @@
                             type="password" class="form-control" placeholder="Password"
                             name="password" id="password" required="required"/>
                 </div>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In
-                </button>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
             </form>
         </div>
     </div>
