--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -129,9 +129,9 @@
                 <ul class="nav navbar-nav">
                     <li class="dropdown"><a href="#" class="dropdown-toggle"
                                             data-toggle="dropdown" role="button" aria-haspopup="true"
-                                            aria-expanded="false">Book <span class="caret"></span></a>
+                                            aria-expanded="false">Category <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a th:href="@{/book/add}">View User</a></li>
+                            <li><a th:href="@{/user/userList}">View User</a></li>
                             <li><a th:href="@{/book/bookList}">Request Add Book</a></li>
                         </ul>
                     </li>
