--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
 <hr/>
 
 <div style="text-align:center; margin-top  : 40px;">
-    <a th:href="@{/book/bookList}">
+    <a th:href="@{/user/userList}">
         <button
                 style="background-color: red; /* Green */ border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 36px;">
             View User List
@@ -22,7 +22,7 @@
 </div>
 
 <div style="text-align:center; margin-top  : 40px;">
-    <a th:href="@{/book/add}">
+    <a th:href="@{/book/bookList}">
         <button
                 style="background-color: #4CAF50; /* Green */ border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 36px;">
             Request Add Book
